# geometric_tools

./: .gitignore  README.md  pyproject.toml
examples/: initial_mesh.py  inner_sphere.py  project_to_surface.py  view_normals.py
figs/: inner_sphere.eps  project_to_surface.eps  view_normals.eps
src/geometric_tools/: core.py
tests/: coords.py
